--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
     "@types/node": "^25.2.1",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
+    "express-validator": "^7.3.1",
     "http-errors": "^2.0.1",
     "mongoose": "^9.1.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typescript": "^5.9.3"
   },
   "name": "crud-task",
@@ -24,6 +27,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "@types/swagger-ui-express": "^4.1.8",
     "concurrently": "^9.2.1",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
